@@ -24,6 +24,9 @@
 	* src/Makefile.am: new file
 	* src/main/Makefile.am: new file
 	* src/main/perl/Makefile.am: new file
+	* src/main/perl/cgi-bin/Makefile.am: new file
+	* src/main/perl/cgi-bin/bedrock.cgi.in: new file (replaces
+	  bedrock.cgi, which we now generate at build time)
 	* src/main/perl/lib/Makefile.am: new file
 	* src/main/resources/Makefile.am: new file
 	* src/main/resources/bedrock-perl5-inc-begin-block.snippet.in: new file
@@ -31,6 +34,7 @@
 	* src/main/perl/cgi-bin/bedrock.cgi: Added file (based on CVS
 	  revision 1.3 of the file that formerly existed as
 	  src/main/perl/lib/Bedrock/Apache/bedrock.cgi
+	- later removed file and replaced it with bedrock.cgi.in
 
 	* NEWS: Added blurb for upcoming 1.6.6 release
 
